Added crispy forms, standard form using model forms

--- a/students/index_classic/templates/index/index.html
+++ b/students/index_classic/templates/index/index.html
@@ -71,9 +71,9 @@
                 {% block 'working-pane-menu' %}
                 <div class="span3 bs-docs-sidebar">
                     <ul class="nav nav-tabs nav-stacked">
-                        <li><a href="{% url 'add_student_classic' %}"><i class="icon-chevron-right"></i> Add Standard</a></li>
-                        <li><a href="#gridSystem"><i class="icon-chevron-right"></i> Add Teacher</a></li>
-                        <li><a href="#fluidGridSystem"><i class="icon-chevron-right"></i> Add Student</a></li>
+                        <li><a href="{% url 'add_standard_classic' %}"><i class="icon-chevron-right"></i> Add Standards</a></li>
+                        <li><a href="#gridSystem"><i class="icon-chevron-right"></i> Add Teachers</a></li>
+                        <li><a href="{% url 'add_student_classic' %}"><i class="icon-chevron-right"></i> Add Students</a></li>
                     </ul>
 
                     <ul class="nav nav-tabs nav-stacked">
