Welcome to django's CBV

--- a/students/index_classic/templates/index/add_teacher.html
+++ b/students/index_classic/templates/index/add_teacher.html
@@ -2,7 +2,7 @@
 
 
 {% block 'page-header-title' %}
-    <h3> Add Student </h3>
+    <h3> Add Teacher </h3>
 {% endblock %}
 
 {% load crispy_forms_tags %}
