--- a/students/index_classic/templates/index/index.html
+++ b/students/index_classic/templates/index/index.html
@@ -72,7 +72,7 @@
                 <div class="span3 bs-docs-sidebar">
                     <ul class="nav nav-tabs nav-stacked">
                         <li><a href="{% url 'add_standard_classic' %}"><i class="icon-chevron-right"></i> Add Standards</a></li>
-                        <li><a href="#gridSystem"><i class="icon-chevron-right"></i> Add Teachers</a></li>
+                        <li><a href="{% url 'add_teacher_classic' %}"><i class="icon-chevron-right"></i> Add Teachers</a></li>
                         <li><a href="{% url 'add_student_classic' %}"><i class="icon-chevron-right"></i> Add Students</a></li>
                     </ul>
 
